// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caroucssel buttons should add buttons 1`] = `
"
		<div class=\\"container\\">
			<div class=\\"caroucssel has-invisible-scrollbar\\" id=\\"custom-id\\">
				
					<div class=\\"item item-0\\">Item 0</div>
				
					<div class=\\"item item-1\\">Item 1</div>
				
					<div class=\\"item item-2\\">Item 2</div>
				
			</div>
		<button type=\\"button\\" class=\\"button is-previous\\" aria-label=\\"Previous\\" title=\\"Go to previous\\" aria-controls=\\"custom-id\\" disabled=\\"\\">
		<span>Previous</span>
	</button><button type=\\"button\\" class=\\"button is-next\\" aria-label=\\"Next\\" title=\\"Go to next\\" aria-controls=\\"custom-id\\">
		<span>Next</span>
	</button></div>
	"
`;

exports[`Caroucssel buttons should add buttons with custom options 1`] = `
"
		<div class=\\"container\\">
			<div class=\\"caroucssel has-invisible-scrollbar\\" id=\\"custom-id\\">
				
					<div class=\\"item item-0\\">Item 0</div>
				
					<div class=\\"item item-1\\">Item 1</div>
				
					<div class=\\"item item-2\\">Item 2</div>
				
			</div>
		<button type=\\"button\\" class=\\"custom-button-class custom-previous-button-class\\" aria-label=\\"Custom previous label\\" title=\\"Custom previous title\\" aria-controls=\\"custom-id\\" disabled=\\"\\">
		<span>Custom previous label</span>
	</button><button type=\\"button\\" class=\\"custom-button-class custom-next-button-class\\" aria-label=\\"Custom next label\\" title=\\"Custom next title\\" aria-controls=\\"custom-id\\">
		<span>Custom next label</span>
	</button></div>
	"
`;

exports[`Caroucssel buttons should add buttons with custom template 1`] = `
"
		<div class=\\"container\\">
			<div class=\\"caroucssel has-invisible-scrollbar\\" id=\\"custom-id\\">
				
					<div class=\\"item item-0\\">Item 0</div>
				
					<div class=\\"item item-1\\">Item 1</div>
				
					<div class=\\"item item-2\\">Item 2</div>
				
			</div>
		<span class=\\"custom-button-class custom-previous-button-class\\" title=\\"Custom previous title\\">Custom previous label</span><span class=\\"custom-button-class custom-next-button-class\\" title=\\"Custom next title\\">Custom next label</span></div>
	"
`;

exports[`Caroucssel pagination should add pagination 1`] = `
"
		<div class=\\"container\\">
			<div class=\\"caroucssel has-invisible-scrollbar\\" id=\\"custom-id\\">
				
					<div class=\\"item item-0\\">Item 0</div>
				
					<div class=\\"item item-1\\">Item 1</div>
				
					<div class=\\"item item-2\\">Item 2</div>
				
			</div>
		<ul class=\\"pagination\\">
		<li>
				<button type=\\"button\\" aria-controls=\\"custom-id\\" aria-label=\\"Go to 1. item\\" title=\\"Go to 1. item\\" disabled=\\"\\">
					<span>1</span>
				</button>
			</li><li>
				<button type=\\"button\\" aria-controls=\\"custom-id\\" aria-label=\\"Go to 2. item\\" title=\\"Go to 2. item\\">
					<span>2</span>
				</button>
			</li><li>
				<button type=\\"button\\" aria-controls=\\"custom-id\\" aria-label=\\"Go to 3. item\\" title=\\"Go to 3. item\\">
					<span>3</span>
				</button>
			</li>
	</ul></div>
	"
`;

exports[`Caroucssel pagination should add pagination with custom options 1`] = `
"
		<div class=\\"container\\">
			<div class=\\"caroucssel has-invisible-scrollbar\\" id=\\"custom-id\\">
				
					<div class=\\"item item-0\\">Item 0</div>
				
					<div class=\\"item item-1\\">Item 1</div>
				
					<div class=\\"item item-2\\">Item 2</div>
				
			</div>
		<ul class=\\"custom-pagination-class\\">
		<li>
				<button type=\\"button\\" aria-controls=\\"custom-id\\" aria-label=\\"Go to first item\\" title=\\"Go to first item\\" disabled=\\"\\">
					<span>first</span>
				</button>
			</li><li>
				<button type=\\"button\\" aria-controls=\\"custom-id\\" aria-label=\\"Go to second item\\" title=\\"Go to second item\\">
					<span>second</span>
				</button>
			</li><li>
				<button type=\\"button\\" aria-controls=\\"custom-id\\" aria-label=\\"Go to third item\\" title=\\"Go to third item\\">
					<span>third</span>
				</button>
			</li>
	</ul></div>
	"
`;

exports[`Caroucssel pagination should add pagination with custom template 1`] = `
"
		<div class=\\"container\\">
			<div class=\\"caroucssel has-invisible-scrollbar\\" id=\\"custom-id\\">
				
					<div class=\\"item item-0\\">Item 0</div>
				
					<div class=\\"item item-1\\">Item 1</div>
				
					<div class=\\"item item-2\\">Item 2</div>
				
			</div>
		<div class=\\"custom-pagination-class\\" aria-controls=\\"custom-id\\">
						
							<div class=\\"item\\" aria-label=\\"Go to first item\\">
								first
							</div>
							<div class=\\"item\\" aria-label=\\"Go to second item\\">
								second
							</div>
							<div class=\\"item\\" aria-label=\\"Go to third item\\">
								third
							</div>
					</div></div>
	"
`;
